# coefplot_py

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  coefplot_py_example.do  environment.yml  example_summary.md  install.md  pyproject.toml  requirements.txt  setup.py  structure.md
coefplot_py/: __init__.py  coefplot_py.ado  tools.py
tests/: __init__.py  run_examples.md  run_examples.sh  test_coefplot.py  test_coefplot_stata.do  test_coefplot_unit.py
